--- a/templates/professeur/show.html.twig
+++ b/templates/professeur/show.html.twig
@@ -15,6 +15,7 @@
                 <th>Prenom</th>
                 <td>{{ professeur.prenom }}</td>
             </tr>
+            {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_GESTION') %}
             <tr>
                 <th>N°Rue</th>
                 <td>{{ professeur.numRue }}</td>
@@ -35,6 +36,8 @@
                 <th>N°Téléphone</th>
                 <td>{{ professeur.tel }}</td>
             </tr>
+            {% else  %}
+            {% endif %}
             <tr>
                 <th>Adresse mail</th>
                 <td>{{ professeur.mail }}</td>
