--- a/templates/cours/show.html.twig
+++ b/templates/cours/show.html.twig
@@ -8,10 +8,6 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ cour.id }}</td>
-            </tr>
-            <tr>
                 <th>Professeur du Cours</th>
                 <td><a href="{{ path('app_professeur_show', {'id': cour.professeur.id}) }}">
                         {{ cour.professeur.nom }}
@@ -47,39 +43,38 @@
         <table class="table">
         <br>
             <thead>
-            <tr>
-            <th>N°</th>
-            <th>Élèves du cours</th>
-            
-            <th>Date de naissance</th>
-            
-            </tr>
+                <tr>
+                <th>N°</th>
+                <th>Élèves du cours</th>
+                {% if is_granted('ROLE_ADMIN')or is_granted('ROLE_GESTION') %}
+                <th>Date de naissance</th>
+                </tr>
+                {% endif %}
             </thead>
-            <tbody>
-            {% if cour.inscriptions|length %}
-            {% for inscription in cour.inscriptions %}
-            <tr>
-            <td style="border-right: 1px solid #ddd;">{{ loop.index }}</td>
-            <td style="border-right: 1px solid #ddd;">
-            <a href="{{ path('app_eleves_show', {'id': inscription.eleves.id}) }}">
-                {{ inscription.eleves.prenom }} {{ inscription.eleves.nom }}
-            </a>
-            </td>
-            
-            <td>{{ inscription.eleves.dateNaiss ? inscription.eleves.dateNaiss|date('d/m/Y') : '' }}</td>
-            
-            </tr>
-            {% endfor %}
-            {% else %}
-            <tr>
-            <td colspan="{{ is_granted('ROLE_ADMIN') or is_granted('ROLE_ADHERENT') ? 3 : 2 }}">Aucun élève inscrit</td>
-            </tr>
-            {% endif %}
-            </tbody>
+                <tbody>
+                {% if cour.inscriptions|length %}
+                {% for inscription in cour.inscriptions %}
+                    <tr>
+                        <td style="border-right: 1px solid #ddd;">{{ loop.index }}</td>
+                        <td style="border-right: 1px solid #ddd;">
+                            <a href="{{ path('app_eleves_show', {'id': inscription.eleves.id}) }}">
+                                {{ inscription.eleves.prenom }} {{ inscription.eleves.nom }}
+                            </a>
+                    </td>
 
-            
-
-            
+                    {% if is_granted('ROLE_ADMIN')or is_granted('ROLE_GESTION') %}
+                    <td>
+                    {{ inscription.eleves.dateNaiss ? inscription.eleves.dateNaiss|date('d/m/Y') : '' }}
+                    </td>
+                    {% endif %}
+                    </tr>
+                {% endfor %}
+                {% else %}
+                    <tr>
+                    <td colspan="{{ is_granted('ROLE_ADMIN') or is_granted('ROLE_ADHERENT') ? 3 : 2 }}">Aucun élève inscrit</td>
+                    </tr>
+                {% endif %}
+                </tbody>
             </thead>
         </table>
 
