--- a/templates/inscriptions/new.html.twig
+++ b/templates/inscriptions/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Inscriptions{% endblock %}
+{% block title %}S'inscrire{% endblock %}
 
 {% block body %}
-    <h1>Create new Inscriptions</h1>
+    <h1>S'inscrire à un cours</h1>
 
     {{ include('inscriptions/_form.html.twig') }}
 
-    <a href="{{ path('app_inscriptions_index') }}">back to list</a>
+    <a href="{{ path('app_inscriptions_new') }}">back to list</a>
 {% endblock %}
