--- a/templates/professeur/edit.html.twig
+++ b/templates/professeur/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Professeur{% endblock %}
+{% block title %}Modifier le professeur{% endblock %}
 
 {% block body %}
-    <h1>Edit Professeur</h1>
+    <h1>Modifier le professeur</h1>
 
-    {{ include('professeur/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('professeur/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('app_professeur_index') }}">back to list</a>
+    <a href="{{ path('app_professeur_index') }}">Retour à list</a>
 
     {{ include('professeur/_delete_form.html.twig') }}
 {% endblock %}
