--- a/templates/professeur/new.html.twig
+++ b/templates/professeur/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('professeur/_form.html.twig') }}
 
-    <a href="{{ path('app_professeur_index') }}">back to list</a>
+    <a href="{{ path('app_professeur_index') }}">Retour à la liste</a>
 {% endblock %}
